Thu Mar 24 11:43:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* strftime.c (rb_strftime_with_timespec): remove unnecessary
	  check, as `s` equals to `endp` when recursed STRFTIME resized
	  the capacity same as the size.

Wed Mar 23 21:48:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* enum.c (ary_inject_op): put subtract operation out of if-clause.

Wed Mar 23 21:38:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* enum.c (ary_inject_op): Use Kahan's compensated summation algorithm
	  for summing up float values.

Wed Mar 23 20:56:59 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* strftime.c (rb_strftime_with_timespec): append formatted results
	  to the given string with expanding, and also deal with NUL chars.

	* strftime.c (rb_strftime, rb_strftime_timespec): return formatted
	  string, not the length put in the given buffer.

	* time.c (rb_strftime_alloc): no longer needs to retry with
	  reallocating buffers.

	* time.c (time_strftime): no longer needs to split by NUL chars.

Wed Mar 23 14:23:54 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/rdoc/ri/driver.rb (interactive): rescue NotFoundError raised in
	  expand_name. (display_name rescues NotFoundError by itself,
	  the original logic looks buggy...)

Wed Mar 23 11:44:53 2016  cremno  <cremno@mail.ru>

	* marshal.c (r_long): cast to `signed char`, which is used
	  already, instead of SIGN_EXTEND_CHAR.

	* parse.y: SIGN_EXTEND_CHAR is no longer used.  [Fix GH-1302]

Wed Mar 23 11:38:47 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cygwin/GNUmakefile.in (MSYS2_ARG_CONV_EXCL_PARAM):
	  * add missing parentheses and remove double quotes.
	  * rename to get rid of recursive references.
	  * as --excludes-dir option is for a path name, its argument
	    should be converted.
	  [ruby-dev:49526] [Bug #12199]

Wed Mar 23 10:39:38 2016  Koichi ITO  <koic.ito@gmail.com>

	* variable.c: Added documentation about order of `Module#constants`
	  [ci skip][Bug #12121][ruby-dev:49505][fix GH-1301]
